--- a/README
+++ b/README
@@ -36,11 +36,11 @@ syntax:
 		| <del> <arg>
 		| <arg> <del> <arg>
 		| <arg>
-	<arg> ::= <expr> | "." | "$"
+	<arg> ::= <expr>
 	<expr> ::= <num> | <num> <op> <expr>
 	<op> ::= "+" | "-"
 	<num> ::= <digit> <num> | <digit>
-	<digit> ::=  "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
+	<digit> ::=  "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" | "." | "$"
 	<del> ::= "," | ";"
 	<param> ::= <letter> <param> | <letter>
 	<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
