--- a/README
+++ b/README
@@ -45,8 +45,12 @@ syntax:
 	<spec> ::= "$" | "."
 	<del> ::= "," | ";"
 	<param> ::= <letter> <param> | <letter>
-	<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
-		| "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
+	<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" 
+		| "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" 
+		| "u" | "v" | "w" | "x" | "y" | "z" | "A" | "B" | "C" | "D" 
+		| "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" 
+		| "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" 
+		| "Y" | "Z"
 
 	exampla:
 		,2n	1,$-1-1-1+10-1-1j	,w kek.c	4	$-1	;.p	q	,n	$,$p	$,p
