--- a/README
+++ b/README
@@ -58,8 +58,8 @@ syntax:
 	<digit> ::=  "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
 	<spec> ::= "$" | "."
 	<del> ::= "," | ";"
-	<param> ::= <alpha> <param> | <alpha>
-	<alpha> ::= <letter> | <Letter>
+	<param> ::= <noalpha> <param> | <noalpha>
+	<noalpha> ::= <letter> | <Letter> | <digit>
 	<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" 
 		| "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" 
 		| "u" | "v" | "w" | "x" | "y" | "z" 
