--- a/README
+++ b/README
@@ -50,9 +50,10 @@ syntax:
 		| <del> <arg>
 		| <arg> <del> <arg>
 		| <arg>
-	<arg> ::= <expr> | <exprspec>
-	<expr> ::= <num> | <num> <op> <expr>
-	<exprspec> ::= <spec> | <spec> <op> <expr>
+	<arg> ::= <num> | <spec> | <expr> | <exprspec>
+	<expr> ::= <num> <opseq> | <num> <opseq> <expr>
+	<exprspec> ::= <spec> <opseq> | <spec> <opseq> <expr>
+	<opseq> ::= <op> | <op> <opseq>
 	<op> ::= "+" | "-"
 	<num> ::= <digit> <num> | <digit>
 	<digit> ::=  "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
